<?xml version="1.0"?>
<package format="3">
  <name>talker_listener</name>
  <version>0.0.1</version>
  <description>ROS 2 Python talker/listener example</description>
  <maintainer email="your_email@example.com">Advait Meshram</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
